Fix tips hand being overflow hidden in Kyon.

--- a/app/components/Popup/View/style.scss
+++ b/app/components/Popup/View/style.scss
@@ -97,7 +97,6 @@
     position: relative;
     width: 100%;
     height: 100%;
-    overflow: hidden;
     background-color: $colour__foreground;
     
     .DW__tabletOrDesktopWidth
